@@ -21,9 +21,9 @@
 #ifndef DOCUMENTATIONPLUG_H
 #define DOCUMENTATIONPLUG_H
 
-enum {MENUNAME=0,COMMAND,SHOWITEM,SEARCHALL,SETTINGSCNT};
+#include "globalincludes.h"
 
-#include "../../../src/kkeditqtPluginInterface.h"
+enum {MENUNAME=0,COMMAND,SHOWITEM,SEARCHALL,SETTINGSCNT};
 
 class DocumentationPlugin : public QObject, kkEditQTPluginInterface
 {
