@@ -3,7 +3,7 @@ CONFIG         += plugin
 QT             += widgets printsupport sql
 HEADERS         = DocumentationPlugin.h
 SOURCES         = DocumentationPlugin.cpp
-INCLUDEPATH += /usr/include/KF6/KSyntaxHighlighting
+INCLUDEPATH += /usr/include/KF6/KSyntaxHighlighting ../../../src 
 TARGET          = $$qtLibraryTarget(DocumentationPlugin)
 DESTDIR         = .plugins
 
