@@ -3,7 +3,7 @@ CONFIG         += plugin
 QT             += widgets printsupport
 HEADERS         = SaveHistory.h
 SOURCES         = SaveHistory.cpp
-INCLUDEPATH += /usr/include/KF6/KSyntaxHighlighting
+INCLUDEPATH += /usr/include/KF6/KSyntaxHighlighting ../../../src 
 TARGET          = $$qtLibraryTarget(SaveHistory)
 DESTDIR         = plugins
 INCLUDEPATH += /usr/include/KF6/KSyntaxHighlighting
